proposal wallets and models
